--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,12 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0",
       "react-scripts": "5.0.1",
       "styled-components": "^5.3.6",
-      "lodash": "^4.17.21"
+      "lodash": "^4.17.21",
+      "vanta": "^0.5.24"
     },
     "devDependencies": {
       "@types/react": "^18.0.28",
