--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,10 @@ services:
     ports:
       - "${BACKEND_PORT:-8000}:8000"
   frontend:
-    build: ./frontend
+    build: 
+      context: ./frontend
+      args:
+        REACT_APP_BACKEND_API_URL: "${REACT_APP_BACKEND_API_URL:-http://localhost:8000}"
     container_name: "${COMPOSE_PROJECT_NAME:-repodar}-frontend"
     depends_on:
       - backend
