--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,11 @@
 # Stage 1: Build the React app
 FROM node:16-alpine AS build
 WORKDIR /app
+
+# Add build argument
+ARG REACT_APP_BACKEND_API_URL
+ENV REACT_APP_BACKEND_API_URL=$REACT_APP_BACKEND_API_URL
+
 COPY package.json ./
 RUN npm install
 COPY . .
