--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,8 +3,8 @@ FROM node:16-alpine AS build
 WORKDIR /app
 
 # Add build argument
-ARG REACT_APP_BACKEND_API_URL
-ENV REACT_APP_BACKEND_API_URL=$REACT_APP_BACKEND_API_URL
+ARG BACKEND_URL
+ENV BACKEND_URL=$BACKEND_URL
 
 COPY package.json ./
 RUN npm install
