--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,8 +3,8 @@ FROM node:16-alpine AS build
 WORKDIR /app
 
 # Add build argument
-ARG BACKEND_URL
-ENV BACKEND_URL=$BACKEND_URL
+ARG REACT_APP_BACKEND_URL
+ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
 
 COPY package.json ./
 RUN npm install
@@ -14,5 +14,4 @@ RUN npm run build
 # Stage 2: Serve the app with Nginx
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
