--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,18 @@ services:
       - .env
     ports:
       - "${BACKEND_PORT:-8000}:8000"
+  backend-service:
+    build: ./backend
+    container_name: "${COMPOSE_PROJECT_NAME:-repodar}-backend-service"
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./backend:/app
+    env_file:
+      - .env
+    profiles:
+      - service
   frontend:
     build: 
       context: ./frontend
@@ -22,7 +34,7 @@ services:
     ports:
       - "${FRONTEND_PORT:-8080}:80"
   postgres:
-    image: postgres:13-alpine
+    image: postgres:17-alpine
     container_name: "${COMPOSE_PROJECT_NAME:-repodar}-postgres"
     env_file:
       - .env
